--- a/D20230718/resume2.css
+++ b/D20230718/resume2.css
@@ -8,6 +8,7 @@ body {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     color: #222;
+    font-family: 400 1em/1.8 Microsoft Yahei,PingFang SC,Avenir,Segoe UI,Hiragino Sans GB,STHeiti,"Microsoft Sans Serif",WenQuanYi Micro Hei,sans-serif
 }
 
 .container {
